<resources>
    <string name="app_name">JoutiaApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_ok">OK</string>
    <string name="arabe">Arabe</string>
    <string name="fran_ais">Français</string>
    <string name="accueil">Accueil</string>
    <string name="cat_gories">Catégories</string>
    <string name="mon_compte">Mon Compte</string>
    <string name="aide">Aide</string>
    <string name="recherche_sur_joutia">Recherche sur Joutia</string>
    <string name="espace_publicit_et_promotions">Espace publicité et Promotions</string>
    <string name="nos_cat_gories">Nos catégories</string>
    <string name="produits_r_cents">Produits Récents</string>
    <string name="acheter">Ajouter au Panier</string>
    <string name="espaces_ads">Espaces ADS</string>
    <string name="nos_boutiques_officiels">Nos boutiques officiels</string>
    <string name="choix_de_la_semaine">Choix de la semaine</string>
    <string name="objets_connect_s">Objets connectés</string>
    <string name="sant_et_beaut">Santé et Beauté</string>
    <string name="sport_et_loisir">Sport et Loisir</string>
    <string name="b_b_et_jouets">Bébé et Jouets</string>
    <string name="d_coration_maison">Décoration Maison</string>
    <string name="mode_et_accessoires">Mode et Accessoires</string>
    <string name="electrom_nager">Electroménager</string>
    <string name="mes_commandes">Mes commandes</string>
    <string name="devenir_vendeur">Devenir Vendeur</string>
    <string name="boite_de_r_ception">Boite de réception</string>
    <string name="bon_d_achat">Bon d\'achat</string>
    <string name="modifier_profil">Modifier Profil</string>
    <string name="aide_et_support">Aide et Support</string>
    <string name="changer_de_langue">Changer de langue</string>
    <string name="se_connecter">Se connecter</string>
    <string name="d_marer_le_chat_en_direct">Démarrer le chat en direct</string>
    <string name="a_propos_de_joutia">A PROPOS DE JOUTIA</string>
    <string name="a_propos_de_nos_services">A propos de nos Services</string>
    <string name="centre_d_assistance">Centre d\'assistance</string>
    <string name="politique_de_confidentialit">Politique de Confidentialité</string>
    <string name="notifications">Notifications</string>
    <string name="pays">Pays</string>
    <string name="langue">Langue</string>
    <string name="informations_sur_l_application">INFORMATIONS SUR L\'APPLICATION</string>
    <string name="version_de_l_application_1_0_0">Version de l\'application 1.0.0</string>
    <string name="connexion">Connexion</string>
    <string name="client">Client</string>
    <string name="vendeur">Vendeur</string>
    <string name="adresse_mail_ou_t_lephone">Adresse mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="vous_n_avez_pas_de_compte_inscrivez_vous">Vous n\'avez pas de compte ? Inscrivez-vous !</string>
    <string name="inscription">Inscription</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="nom_complet">Nom complet</string>
    <string name="adresse_de_livraison">Adresse de livraison</string>
    <string name="confirmer">Confirmer</string>
    <string name="inscription_vendeur">Inscription Vendeur</string>
    <string name="nom_du_magasin">Nom du magasin</string>
    <string name="adresse_du_magasin">Adresse du magasin</string>
    <string name="rib_bancaire_du_compte">Rib Bancaire du compte</string>
    <string name="ville_de_livraison">Ville de livraison :</string>
    <string name="point_relais">- Point relais :</string>
    <string name="livraison_domicile">- Livraison à domicile :</string>
    <string name="modalit_s_de_retour">- Modalités de retour :</string>
    <string name="evolution_de_produit">Evolution de produit :</string>
    <string name="d_tails_de_produit">Détails de produit :</string>
    <string name="appelez">Appelez</string>
    <string name="informations_persnonneles">Informations persnonnelles</string>
    <string name="adresse">Adresse </string>
    <string name="ville">Ville </string>
    <string name="t_l_phone">Téléphone </string>
    <string name="mettre_jour">Mettre à jour</string>
    <string name="choisir_votre_langue">Choisir votre langue</string>
    <string name="changer_la_langue">Changer la langue</string>
    <string name="image_du_produit">Image du Produit :</string>
    <string name="pour_uploader_les_photos_merci_de_cliquer_sur_le_en_haut">Pour uploader les photos, merci de cliquer sur le (+) en haut</string>
    <string name="uploader_ou_prendre_au_max_1_photo">* Uploader ou prendre au max 3 photo</string>
    <string name="nom_du_produit">Nom du Produit :</string>
    <string name="description_du_produit">Description du Produit :</string>
    <string name="prix_du_produit">Prix du Produit :</string>
    <string name="quantit_du_produit">Quantité du Produit :</string>
    <string name="d_lai_de_livraison_du_produit">Délai de livraison du Produit :</string>
    <string name="cat_gorie_du_produit">Catégorie du produit</string>
    <string name="marque_du_produit">Marque du produit</string>
    <string name="etat_du_produit">Etat du produit</string>
    <string name="neuf">Neuf</string>
    <string name="_2_me_main">2éme main</string>
    <string name="valider">Valider</string>
    <string name="produit">Produit</string>
    <string name="commandes">Commandes</string>
    <string name="param_tres">Paramètres</string>
    <string name="rib">RIB :</string>
    <string name="en_attente">En attente</string>
    <string name="valid">Validé</string>
    <string name="rejet">Rejeté</string>
    <string name="en_cours">En cours</string>
    <string name="livr_e">Livrée</string>
    <string name="refus_e">Refusée</string>
    <string name="annul_e">Annulée</string>
    <string name="historique_commandes">Historique Commandes</string>
    <string name="changer_de_profil">Changer de profil</string>
    <string name="tes_vous_sur_de_vouloir_retourner_la_partie_acheteur">Êtes vous sur de vouloir retourner à la partie acheteur ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="choisir_une_langue">Choisir une langue</string>
    <string name="voulez_vous_vous_inscrire_autant_que">Voulez vous vous inscrire autant que ?</string>
    <string name="les_2_champs_sont_obligatoires">Les 2 champs sont obligatoires.</string>
    <string name="adresse_email_invalide">Adresse email invalide</string>
    <string name="une_erreur_est_survenue_merci_de_r_essayer_plus_tard">Une erreur est survenue, merci de réessayer plus tard</string>
    <string name="adresse_email_obligatoire">Adresse Email obligatoire</string>
    <string name="t_l_phone_obligatoire">Téléphone obligatoire</string>
    <string name="mot_de_passe_obligatoire">Mot de passe obligatoire</string>
    <string name="nom_complet_obligatoire">Nom complet obligatoire</string>
    <string name="adresse_de_livraison_obligatoire">Adresse de livraison obligatoire</string>
    <string name="ville_obligatoire">Ville obligatoire</string>
    <string name="le_mot_de_passe_doit_contenir_8_caract_res">le Mot de passe doit contenir 8 caractères</string>
    <string name="votre_client_a_bien_t_ajouter">Votre client a bien été ajouter.</string>
    <string name="nom_du_magasin_obligatoire">Nom du magasin obligatoire</string>
    <string name="adresse_du_magasin_obligatoire">Adresse du magasin obligatoire</string>
    <string name="ville_du_magasin_obligatoire">Ville du magasin obligatoire</string>
    <string name="merci_d_uploader_une_image">Merci d\'uploader une image</string>
    <string name="merci_de_remplir_tout_les_champs">Merci de remplir tout les champs</string>
    <string name="produit_ajout">Votre demande a été enregistrée</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="voulez_vous_vous_d_connecter">Voulez vous vous déconnecter ?</string>
    <string name="merci_de_vous_connecter">Merci de vous connecter</string>
    <string name="mon_panier">Mon Panier</string>
    <string name="merci_de_vous_connecter_pour_pouvoir_valider_votre_commande">Merci de vous connecter pour pouvoir valider votre commande</string>
    <string name="annuler">Annuler</string>
    <string name="vouler_vous_valider_votre_commande">Voulez vous valider votre commande ?</string>
    <string name="icone_panier">Icone Panier</string>
    <string name="cette_icone_vous_permet_d_acc_der_votre_panier">Cette icone vous permet d\'accéder à votre panier</string>
    <string name="valider_la_commande">Valider la Commande</string>
    <string name="conditions_g_n_rales_d_utilisation">Conditions générales d\'utilisation</string>
    <string name="merci_de_vous_connecter_pour_pouvoir_acc_der_au_proofil_voulez_vous_vous_connectez">Merci de vous connecter pour pouvoir accéder au profil. Voulez vous vous connectez ?</string>
    <string name="veuillez_remplir_tous_les_champs">Veuillez remplir tous les champs</string>
    <string name="vos_informations_ont_t_modifi_es_avec_succ_s">Vos informations ont été modifiées avec succès</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="je_me_suis_souvenu_de_mon_mot_de_passe">Je me suis souvenu de mon mot de passe !</string>
    <string name="joutia_est_une_plateforme_de_commerce_en_ligne_qui_permet_des_vendeurs_principalement_bas_s_dans_les_ventes_directes_aux_consommateurs_de_proposer_leurs_produits_sur_le_march_l_application_mobile_joutia_permet_aux_utilisateurs_de_naviguer_facilement_travers_une_large_gamme_de_produits_allant_de_l_lectronique_aux_v_tements_en_passant_par_des_accessoires_pour_la_maison_et_bien_plus_encore_elle_offre_des_fonctionnalit_s_telles_que_des_fltres_de_recherche_des_recommandations_personnalis_es_des_options_de_paiement_s_curis_et_la_possibilit_de_suivre_les_commandes_en_temps_r_el_les_utilisateurs_peuvent_galement_b_n_fcier_de_promotions_sp_ciales_de_r_ductions_et_de_coupons_de_plus_l_application_facilite_la_gestion_des_commandes_gr_ce_des_avis_sur_les_produits_un_service_client_r_actif_et_une_option_de_retour_si_n_cessaire_joutia_est_reconnu_pour_ses_prix_comp_titifs_mais_il_est_important_que_les_acheteurs_v_rifent_les_avis_des_produits_avant_d_effectuer_un_achat_afn_de_garantir_une_exp_rience_positive">Joutia est une plateforme de commerce en ligne qui permet à des vendeurs, principalement basés dans les ventes directes aux consommateurs, de proposer leurs produits sur le marché. L\'application mobile Joutia permet aux utilisateurs de naviguer facilement à travers une large gamme de produits, allant de l\'électronique aux vêtements, en passant par des accessoires pour la maison et bien plus encore. Elle offre des fonctionnalités telles que des fltres de recherche, des recommandations personnalisées, des options de paiement sécurisé et la possibilité de suivre les commandes en temps réel. Les utilisateurs peuvent également bénéfcier de promotions spéciales, de réductions et de coupons. De plus, l’application facilite la gestion des commandes grâce à des avis sur les produits, un service client réactif et une option de retour si nécessaire. Joutia est reconnu pour ses prix compétitifs, mais il est important que les acheteurs vérifent les avis des produits avant d\'effectuer un achat, afn de garantir une expérience positive</string>
    <string name="parametres">PARAMETRES</string>
</resources>