<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="#fcd468"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LangueActivity">

    <TextView
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choisir_votre_langue" />

    <LinearLayout
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RadioGroup
            android:id="@+id/language_radio_group"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radioButton_fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fran_ais" />

            <RadioButton
                android:id="@+id/radioButton_ar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabe" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:onClick="onChangeLanguageClick"
        android:layout_marginBottom="10dp"
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="#63b23d"
        android:text="@string/changer_la_langue"
        android:textSize="18sp"
        app:cornerRadius="20dp" />
</LinearLayout>