<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragment.HelpFragment">



    <TextView
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:textSize="16dp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_propos_de_joutia" />

    <LinearLayout
        android:background="@color/white"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/about"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="326dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/a_propos_de_nos_services"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ImageView
                android:layout_gravity="center"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_right"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/cgu"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="326dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/conditions_g_n_rales_d_utilisation"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ImageView
                android:layout_gravity="center"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_right"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/politique"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="326dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/politique_de_confidentialit"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ImageView
                android:layout_gravity="center"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_right"/>


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textSize="16dp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parametres" />

    <LinearLayout
        android:background="@color/white"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearNotif"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="326dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/notifications"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <ImageView
                android:layout_gravity="center"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_right"/>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLangue"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="326dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/langue"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:text="Français"
                android:textColor="@color/black"
                android:textSize="16dp" />
            <ImageView
                android:layout_gravity="center"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_right"/>


        </LinearLayout>


    </LinearLayout>


    <TextView
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textSize="16dp"
        android:layout_marginLeft="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informations_sur_l_application" />

    <LinearLayout
        android:background="@color/white"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout

            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="326dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/version_de_l_application_1_0_0"
                android:textColor="@color/black"
                android:textSize="16dp" />




        </LinearLayout>



    </LinearLayout>


</LinearLayout>