<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbkg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ConnexionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="300dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/custom_edittext"
                app:cardCornerRadius="30dp"
                app:cardElevation="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="24dp">


                    <TextView
                        android:id="@+id/loginText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/connexion"
                        android:textAlignment="center"
                        android:textColor="@color/purple"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">


                        <RadioButton
                            android:id="@+id/client"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/client" />

                        <Space
                            android:layout_width="20dp"
                            android:layout_height="wrap_content" />


                        <RadioButton
                            android:id="@+id/vendeur"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vendeur" />
                    </RadioGroup>


                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_edittext"
                        android:drawablePadding="8dp"
                        android:hint="@string/adresse_mail_ou_t_lephone"
                        android:inputType="textEmailAddress"
                        android:padding="8dp"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/cardview_dark_background" />


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etPasswordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/custom_edittext"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_ed_box"
                            android:hint="@string/mot_de_passe"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/loginButton"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/purple"
                        android:onClick="goHome"
                        android:text="@string/se_connecter"
                        android:textSize="18sp"
                        app:cornerRadius="20dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/signupText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:onClick="goInscription"
                android:padding="8dp"
                android:text="@string/vous_n_avez_pas_de_compte_inscrivez_vous"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/FgpassText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:onClick="goFpw"
                android:padding="8dp"
                android:text="@string/mot_de_passe_oubli"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="14sp" />


        </LinearLayout>



    </ScrollView>

</LinearLayout>